crates/aranya-policy-compiler/tests/data/type_errors/deserialize_wrong_type_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
6 |       return deserialize(3)
  |                          ^ expected `bytes` but found `int`
